# CodeLook

./: .gitignore  Cargo.toml  Info.plist  LICENSE  README.md  THIRD_PARTY_NOTICES.md  make_app.sh
assets/: AppIcon.icns  darcula.tmTheme
src/: app.rs  ast.rs  git.rs  highlight.rs  icons.rs  keymap.rs  main.rs  review.rs  search.rs  symbols.rs
